# mini_winclient

./: .gitignore  Cargo.toml  README.md
examples/simple_no_std_client/: Cargo.toml  README.md  build.rs
examples/simple_no_std_client/src/: main.rs
examples/simple_no_std_client/src/x86_64/: start.s
server/: CMakeLists.txt
server/config/systemd/: mini-winserver.service.in
server/packaging/debian-control/: postinst.in  postrm.in  prerm.in
server/src/: CMakeLists.txt  Main.qml  main.cpp  vgapalette.h  winclient.cpp  winclient.h  winclientview.cpp  winclientview.h  wineventinterceptor.cpp  wineventinterceptor.h  winserver.cpp  winserver.h
src/: bufsocket.rs  event.rs  lib.rs  read.rs  socket.rs  time.rs  winclient.rs  write.rs
src/sys/: io_sys.rs  mod.rs  syscall.rs  time_sys.rs
src/sys/x86_64/: syscall.s
src/utils/: cyclicbuf.rs  mod.rs
